<resources>
    <string name="app_name">SchoolManager App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scan_qr_code">Scan the QR code</string>
    <string name="notes_eleves">Notes des élèves</string>
    <string name="s_lectionner_une_salle_de_classe">Sélectionner une salle de classe</string>
    <string name="liste_des_l_ves">Liste des élèves</string>
    <string name="entrer_note">Enregistrement de note</string>
    <string name="enter_student_note">Entrez la note de l\'élève</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="Eregistrement_note">Enregistrement des notes</string>
    <string name="erreur_champ_note_deborder">Entrez une note comprise entre 0 et 20</string>
    <string name="erreur_note_non_valide">Entrez une note Valide SVP</string>
    <string name="s_lectionner_une_mati_re">Sélectionner une matière</string>
    <string name="cc">cc</string>
    <string name="ds">ds</string>
    <string name="note_classique">note classique</string>
    <string name="s_quences_d_valuation">Séquences d\'évaluation</string>
    <string name="cancel">Fermer</string>
    <string name="ok">Valider</string>


    <string-array name="cycle_evaluation">
        <item>cc</item>
        <item>ds</item>
        <item>note</item>
    </string-array>

    <string-array name="numero_sequence">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
