<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:background="@drawable/shape_note_bottom_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_10dp"
    android:paddingBottom="@dimen/dimen_30dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="8dp"
    app:cardCornerRadius="@dimen/dimen_10sp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/entrer_note"
            android:textSize="@dimen/diment_17dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Private"
                android:textSize="@dimen/diment_17dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/id_community_contribution_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp" />
        </LinearLayout>

    </LinearLayout>



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_community_contribution_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:background="@null"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:orientation="horizontal"
        android:hint="@string/enter_student_note"
        android:textSize="@dimen/dim_25sp" />




    <Button
        android:id="@+id/id_community_contribution_btn_contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:background="@drawable/shape_save_note_btn"
        android:drawableStart="@drawable/save_icon"
        android:paddingHorizontal="@dimen/dimen_30dp"
        android:text="@string/enregistrer"
        android:textColor="@color/white_color" />

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_contribution_btn"
        android:gravity="center"
        android:paddingHorizontal="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_contribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contribute"
            android:layout_gravity="center"
            android:textColor="@color/white_color"
            android:textSize="@dimen/dimen_20dp"
            android:textStyle="bold" />
    </LinearLayout>-->
</LinearLayout>